--- a/04 Practice Project (Start)/exercises/.github/Workflows/deployment.yaml
+++ b/04 Practice Project (Start)/exercises/.github/Workflows/deployment.yaml
@@ -2,7 +2,7 @@ name: Deployment Ex1
 on : push
 jobs:
     deploy:
-        runs-on: ubuntu-latest 
+        runs-on: ubuntu-latest
         steps:
             - name: Get code 
               uses: actions/checkout@v3
@@ -14,3 +14,7 @@ jobs:
                 run: npm run test 
             -name: Build code 
                 run: npm run build 
+            
+            -name: Deploy code 
+                run: echo "Deploying..."
+                  
